# artwork-classification

./: README.md  kaggle.json  pyproject.toml  requirements.txt  setup.py
artwork_classification/: __init__.py  data.py  evaluate.py  model.py  train.py  transforms.py  utils.py
tests/: __init__.py  test_data.py  test_model.py  test_train.py  test_transforms.py
