[tool.poetry]
name = "artwork-classification"
version = "0.1.0"
description = "A Python library for classifying artwork using deep learning techniques."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.9.0"
torchvision = "^0.10.0"
pandas = "^1.3.0"
numpy = "^1.21.0"
matplotlib = "^3.4.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.0"
flake8 = "^3.9.0"
black = "^21.5b1"